<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_temperature"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="24dp"
    android:orientation="vertical"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_temp_sign"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc_imageTempSign"
            app:srcCompat="@drawable/temperature" />

        <ImageView
            android:id="@+id/image_weather_icon"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc_imageIcon"
            android:foregroundGravity="left"
            app:srcCompat="@drawable/clear_day" />

        <TextView
            android:id="@+id/text_temp_val"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/image_temp_sign"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="10°"
            android:textColor="@android:color/black"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/text_temp_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignEnd="@+id/text_temp_val"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/image_temp_sign"
            android:layout_marginRight="4dp"
            android:layout_toEndOf="@+id/image_temp_sign"
            android:gravity="center"
            android:text="Feels like 14°"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_lastupdate_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/last_update_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_lastupdate_time"
            android:layout_alignBottom="@+id/text_lastupdate_time"
            android:layout_alignParentStart="true"
            android:text="@string/weather_summary"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>